--- a/index.html
+++ b/index.html
@@ -36,12 +36,77 @@
 <body class="font-lato">
     <header class="">
         <!-- navbar section start -->
-        <nav>
-          
-        </nav>
         <!-- navbar section end -->
         <!-- banner section start -->
         <section class="max-w-screen-xl mx-auto px-5 md:px-10 lg:px-20 py-5 my-10">
+          <div class="carousel relative w-full ">
+            <div id="slide1" class="carousel-item relative w-full">
+              <img src="images/banner1.png" class="w-full" />
+              <div class="absolute flex justify-around transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide4" class="btn btn-circle">❮</a> 
+                <div class="text-center space-y-3">
+                  <h1 class="text-2xl lg:text-6xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
+                  <button class="btn text-white bg-[#F85559] rounded-lg border-none">Shop Now</button>
+                </div>
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide2" class="carousel-item relative w-full">
+              <img src="images/banner2.png" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle">❮</a> 
+                <div class="text-center space-y-3">
+                  <h1 class="text-2xl lg:text-6xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
+                  <button class="btn text-white bg-[#F85559] rounded-lg border-none">Shop Now</button>
+                </div>
+                <a href="#slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide3" class="carousel-item relative w-full">
+              <img src="images/banner3.png" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle">❮</a> 
+                <div class="text-center space-y-3">
+                  <h1 class="text-2xl lg:text-6xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
+                  <button class="btn text-white bg-[#F85559] rounded-lg border-none">Shop Now</button>
+                </div>
+                <a href="#slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide4" class="carousel-item relative w-full">
+              <img src="images/banner4.png" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle">❮</a> 
+                <div class="text-center space-y-3">
+                  <h1 class="text-2xl lg:text-6xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
+                  <button class="btn text-white bg-[#F85559] rounded-lg border-none">Shop Now</button>
+                </div>
+                <a href="#slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div  class="flex justify-center gap-5  lg:absolute bg-white left-10 xl:left-40 -bottom-20">
+              <div class="text-center">
+                <img src="images/fruit1.png" alt="fruit1">
+                <p class="font-medium">Strawberry</p>
+              </div>
+              <div class="text-center">
+                <img src="images/fruit2.png" alt="fruit1">
+                <p class="font-medium">Strawberry</p>
+              </div>
+              <div class="text-center">
+                <img src="images/fruit3.png" alt="fruit1">
+                <p class="font-medium">Strawberry</p>
+              </div>
+              <div class="text-center">
+                <img src="images/fruit4.png" alt="fruit1">
+                <p class="font-medium">Strawberry</p>
+              </div>
+              <div class="text-center">
+                <img src="images/fruit5.png" alt="fruit1">
+                <p class="font-medium">Strawberry</p>
+              </div>
+            </div>
+          </div>
           
         </section>
         <!-- banner section end -->
