updated customized tailwind section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           theme: {
             extend: {
               backgroundImage: {
-        'hero-pattern': "url('/images/banner1.png')",
+        'hero-pattern': "url('./images/banner1.png')",
         
       }
             }
